<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntentEmail</string>
    <string name="action_settings">Settings</string>
    <string name="userFoto">UserFoto</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="skype">Skype</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="sendEmail">Send</string>
    <string name="attachFile">Attach file</string>
    <string name="fileName">FileName</string>

</resources>
