<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/verticalHorizontalMargin"
        android:layout_marginTop="@dimen/verticalHorizontalMargin"
        android:text="@string/userFoto" />

    <ImageView
        android:id="@+id/userFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/verticalHorizontalMargin"
        android:layout_marginTop="@dimen/verticalHorizontalMargin"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/userFoto" />

    <Button
        android:id="@+id/sms"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/instagram"
        android:layout_alignBottom="@+id/instagram"
        android:layout_alignParentRight="true"
        android:text="@string/sms" />

    <Button
        android:id="@+id/skype"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/call"
        android:layout_alignBottom="@+id/call"
        android:layout_toRightOf="@+id/instagram"
        android:text="@string/skype" />

    <TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/twitter"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/subject" />

    <EditText
        android:id="@+id/editSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/subject"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/subject" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editSubject"
        android:layout_marginLeft="10dp"
        android:text="@string/message" />

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/message"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/message" />

    <Button
        android:id="@+id/sendEmail"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editMessage"
        android:layout_alignParentRight="true"
        android:text="@string/sendEmail" />

    <Button
        android:id="@+id/attachFile"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editMessage"
        android:layout_below="@+id/editMessage"
        android:layout_marginTop="10dp"
        android:text="@string/attachFile" />

    <Button
        android:id="@+id/twitter"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/instagram"
        android:layout_alignBottom="@+id/instagram"
        android:layout_alignParentLeft="true"
        android:text="@string/twitter" />

    <Button
        android:id="@+id/instagram"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/skype"
        android:layout_alignBottom="@+id/skype"
        android:layout_toRightOf="@+id/twitter"
        android:text="@string/instagram" />

    <Button
        android:id="@+id/call"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userFoto"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/sendEmail"
        android:text="@string/call" />

    <TextView
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attachFile"
        android:layout_centerHorizontal="true"
        android:text="@string/fileName" />

</RelativeLayout>